--- a/index.html
+++ b/index.html
@@ -27,13 +27,117 @@
 
   <script>
     // Danh sách 100 câu hỏi gốc (chỉ demo vài câu, bạn có thể mở rộng)
-    const fullQuestions = [
-      { q: "1) Kết quả của 2^5 là:", options: ["A. 10", "B. 25", "C. 32", "D. 64"], correct: 2 },
-      { q: "2) ƯCLN(24, 36) là:", options: ["A. 6", "B. 12", "C. 18", "D. 24"], correct: 1 },
-      { q: "3) Giá trị của |-7| là:", options: ["A. -7", "B. 0", "C. 7", "D. 14"], correct: 2 },
-      { q: "4) Tích của (-3) × (-5) là:", options: ["A. -15", "B. 8", "C. 15", "D. 0"], correct: 2 },
-      { q: "5) Số nào chia hết cho cả 2 và 5?", options: ["A. 15", "B. 30", "C. 45", "D. 75"], correct: 1 }
-    ];
+const fullQuestions = [
+  { q: "Số nhỏ nhất có 4 chữ số và chia hết cho 9 là", options: ["A. 1002","B. 1008","C. 1017","D. 1026"], correct: 1 },
+  { q: "Chọn giá trị lớn nhất", options: ["A. 2^6","B. 3^4","C. 5^3","D. 4^4"], correct: 3 },
+  { q: "120 − [15 × (6 − 2)] =", options: ["A. 45","B. 60","C. 120","D. 180"], correct: 1 },
+  { q: "Số nhỏ nhất chia hết cho 15 và 28 là", options: ["A. 210","B. 420","C. 840","D. 1260"], correct: 1 },
+  { q: "Trong các số: 3456; 4563; 6345; 5346 – số chia hết cho 36 là", options: ["A. 3456","B. 4563","C. 6345","D. 5346"], correct: 0 },
+  { q: "Phân tích 84 ra thừa số nguyên tố đúng là", options: ["A. 2^2·3·7","B. 2·3^2·7","C. 2^3·3·7","D. 2^2·3^2·7"], correct: 0 },
+  { q: "|−18| − |−5| =", options: ["A. −13","B. 13","C. −23","D. 23"], correct: 1 },
+  { q: "10^2 − (3^2 + 4^2) =", options: ["A. 7","B. 25","C. 50","D. 75"], correct: 3 },
+  { q: "Số N = 3a7 chia hết cho 9. Chữ số a bằng", options: ["A. 0","B. 2","C. 5","D. 8"], correct: 3 },
+  { q: "Số 74x8 chia hết cho 9. x bằng", options: ["A. 0","B. 2","C. 5","D. 8"], correct: 3 },
+
+  { q: "ƯCLN(36, 60) bằng", options: ["A. 6","B. 12","C. 18","D. 24"], correct: 1 },
+  { q: "BCNN(24, 36, 90) bằng", options: ["A. 180","B. 360","C. 720","D. 1080"], correct: 1 },
+  { q: "Tập A = {x ∈ N | x < 10, x nguyên tố}. Số phần tử của A là", options: ["A. 2","B. 4","C. 5","D. 6"], correct: 1 },
+  { q: "Sắp xếp tăng dần đúng", options: ["A. 5601 < 5106 < 5160 < 5016","B. 5016 < 5106 < 5160 < 5601","C. 5106 < 5016 < 5601 < 5160","D. 5016 < 5160 < 5106 < 5601"], correct: 1 },
+  { q: "Tính nhanh 125 × 48", options: ["A. 5 000","B. 6 000","C. 5 500","D. 4 800"], correct: 1 },
+  { q: "(80 − 5^2) ÷ 5 =", options: ["A. 9","B. 11","C. 13","D. 15"], correct: 1 },
+  { q: "Trong số 607 540, chữ số 6 có giá trị", options: ["A. 6","B. 600","C. 600 000","D. 6 000"], correct: 2 },
+  { q: "Số 2b5 chia hết cho 9. b =", options: ["A. 1","B. 2","C. 4","D. 7"], correct: 1 },
+  { q: "Số nguyên tố trong các số: 91; 97; 121; 143 là", options: ["A. 91","B. 97","C. 121","D. 143"], correct: 1 },
+  { q: "(6 + 4) × (9 − 7) =", options: ["A. 10","B. 20","C. 40","D. 60"], correct: 1 },
+
+  { q: "Giá trị 2^3 · 2^4 bằng", options: ["A. 2^7","B. 2^{12}","C. 2^1","D. 14"], correct: 0 },
+  { q: "(10^2)^3 =", options: ["A. 10^5","B. 10^6","C. 10^8","D. 10^9"], correct: 1 },
+  { q: "Số lớn nhất nhỏ hơn 30 và là bội của 3 là", options: ["A. 27","B. 28","C. 29","D. 30"], correct: 0 },
+  { q: "Số ba chữ số chia hết cho 25 là", options: ["A. 375","B. 382","C. 493","D. 567"], correct: 0 },
+  { q: "Điều kiện để x chia hết cho 6", options: ["A. x chẵn","B. x chia hết cho 3","C. x chia hết cho 2 và 3","D. x chia hết cho 9"], correct: 2 },
+  { q: "|−15| + |0| − |7| =", options: ["A. −8","B. 8","C. −22","D. 22"], correct: 1 },
+  { q: "Phát biểu đúng về tập rỗng", options: ["A. Có 1 phần tử 0","B. Không có phần tử nào","C. Có vô hạn phần tử","D. Có hai phần tử 0 và 1"], correct: 1 },
+  { q: "Tìm x: x + 3 209 = 10 000", options: ["A. 6 781","B. 6 791","C. 7 781","D. 7 791"], correct: 1 },
+  { q: "Tìm y: 25 000 − y = 9 876", options: ["A. 14 876","B. 15 124","C. 34 876","D. 35 124"], correct: 1 },
+  { q: "18 × (50 + 2) =", options: ["A. 936","B. 900","C. 864","D. 804"], correct: 0 },
+
+  { q: "[−5 − (−9)] − [−3 − (−4)] =", options: ["A. 3","B. 4","C. 5","D. 6"], correct: 0 },
+  { q: "Số 99 999 chia hết cho", options: ["A. 3","B. 9","C. 11","D. A và B đúng"], correct: 3 },
+  { q: "Trong các phát biểu, đúng là", options: ["A. 1 là số nguyên tố","B. Mọi số chẵn đều chia hết cho 4","C. Mọi bội của 10 đều chia hết cho 2 và 5","D. Mọi số chia hết cho 9 đều chia hết cho 6"], correct: 2 },
+  { q: "x nhỏ nhất sao cho 72x chia hết cho 18", options: ["A. 1","B. 2","C. 3","D. 4"], correct: 0 },
+  { q: "BCNN(15, 28) =", options: ["A. 210","B. 280","C. 420","D. 840"], correct: 2 },
+  { q: "Chọn số LỚN NHẤT mà 1008 chia hết: 7; 8; 9; 11", options: ["A. 7","B. 8","C. 9","D. 11"], correct: 2 },
+  { q: "5^2 + 4^3 =", options: ["A. 41","B. 57","C. 81","D. 89"], correct: 3 },
+  { q: "Số đối của −7 là", options: ["A. 7","B. −7","C. 0","D. −14"], correct: 0 },
+  { q: "So sánh 2^6 và 3^4", options: ["A. 2^6 > 3^4","B. 2^6 < 3^4","C. Bằng nhau","D. Không so sánh được"], correct: 1 },
+  { q: "Điền để đúng: a − [b − (−c)] =", options: ["A. a − b + c","B. a − b − c","C. a + b − c","D. a + b + c"], correct: 1 },
+
+  { q: "405 020 viết bằng lời đúng là", options: ["A. Bốn trăm linh năm nghìn không trăm hai mươi","B. Bốn trăm lẻ năm nghìn không trăm hai mươi","C. Bốn trăm linh năm ngàn không trăm hai mươi","D. Bốn trăm năm nghìn lẻ hai mươi"], correct: 1 },
+  { q: "Chọn x: 20 < x < 30 và x là bội của 3 và 4", options: ["A. 20","B. 24","C. 28","D. 30"], correct: 1 },
+  { q: "2 × (30 − 4 × 5) + 10 =", options: ["A. 10","B. 20","C. 30","D. 40"], correct: 2 },
+  { q: "Trong các số sau, KHÔNG chia hết cho 4 là", options: ["A. 312","B. 516","C. 728","D. 902"], correct: 3 },
+  { q: "||−8| − |5|| =", options: ["A. 3","B. 13","C. −3","D. −13"], correct: 0 },
+  { q: "ƯCLN(72, 108, 90) =", options: ["A. 6","B. 9","C. 18","D. 36"], correct: 2 },
+  { q: "x lớn nhất chia hết cho 24 và 40 với x ≤ 200", options: ["A. 80","B. 120","C. 160","D. 200"], correct: 1 },
+  { q: "Các số nguyên nằm giữa −5 và 3 có bao nhiêu phần tử", options: ["A. 6","B. 7","C. 8","D. 9"], correct: 1 },
+  { q: "(−7) + 12 − (−5) =", options: ["A. 0","B. 10","C. 20","D. 24"], correct: 1 },
+  { q: "−(7 − 12) =", options: ["A. −5","B. 5","C. −19","D. 19"], correct: 1 },
+
+  { q: "Số 1 035 chia hết cho", options: ["A. 2","B. 5","C. 10","D. 25"], correct: 1 },
+  { q: "Tính nhanh: 125 + 375 + 500 =", options: ["A. 900","B. 950","C. 1 000","D. 1 100"], correct: 2 },
+  { q: "x nhỏ nhất sao cho x chia hết cho 9 và 5, x < 200", options: ["A. 45","B. 90","C. 135","D. 180"], correct: 0 },
+  { q: "Tổng các chữ số của 10 000 là", options: ["A. 1","B. 4","C. 5","D. 10"], correct: 0 },
+  { q: "Số có ba chữ số chia hết cho 8 là", options: ["A. 248","B. 250","C. 333","D. 562"], correct: 0 },
+  { q: "(3^3 + 4 × 7 − 2) =", options: ["A. 27","B. 53","C. 49","D. 51"], correct: 1 },
+  { q: "Số nguyên tố nhỏ hơn 30 có bao nhiêu số", options: ["A. 8","B. 9","C. 10","D. 11"], correct: 2 },
+  { q: "Tập chữ cái khác nhau của “VIETNAM” có số phần tử là", options: ["A. 4","B. 5","C. 6","D. 7"], correct: 3 },
+  { q: "Số 1 001 chia hết cho", options: ["A. 7","B. 11","C. 13","D. A, B, C đều đúng"], correct: 3 },
+  { q: "x thỏa −3 < x ≤ 2 có bao nhiêu giá trị nguyên", options: ["A. 4","B. 5","C. 6","D. 7"], correct: 1 },
+
+  { q: "Bỏ ngoặc: −(a − b + c) =", options: ["A. −a − b + c","B. −a + b − c","C. −a + b + c","D. −a − b − c"], correct: 1 },
+  { q: "Chữ số hàng chục của số 3·10^4 + 5·10^2 + 8·10 + 6 là", options: ["A. 8","B. 6","C. 5","D. 3"], correct: 0 },
+  { q: "(3 456 + 2 544) − 1 000 =", options: ["A. 5 000","B. 5 500","C. 4 900","D. 4 800"], correct: 0 },
+  { q: "7y = 4 997. Thương và dư của 4 997 ÷ 7 là", options: ["A. 713 dư 6","B. 714 dư 1","C. 713 dư 5","D. 714 dư 3"], correct: 0 },
+  { q: "36 × (25 + 75) =", options: ["A. 1 800","B. 3 600","C. 2 700","D. 3 000"], correct: 1 },
+  { q: "Số 90 100 so với 9·10^4 + 100", options: ["A. <","B. >","C. =","D. Không xác định"], correct: 2 },
+  { q: "Trên tia số, số gần 0 hơn", options: ["A. 999","B. 1 001","C. bằng nhau","D. Không xác định"], correct: 0 },
+  { q: "Nhà máy sản xuất 2 350 sp/ngày. 12 ngày sản xuất được", options: ["A. 27 000","B. 28 200","C. 23 500","D. 24 600"], correct: 1 },
+  { q: "Tìm x: x × 45 = 9 900", options: ["A. 210","B. 220","C. 230","D. 240"], correct: 1 },
+  { q: "4^4 − 5^3 =", options: ["A. 131","B. 256","C. −131","D. 125"], correct: 0 },
+
+  { q: "(6 − 2) × (9 − 7) × 5 =", options: ["A. 20","B. 40","C. 50","D. 60"], correct: 1 },
+  { q: "Tổng chữ số của số chia hết cho 9 nhỏ nhất có 4 chữ số là", options: ["A. 8","B. 9","C. 10","D. 18"], correct: 1 },
+  { q: "Số nào KHÔNG phải bội của 3", options: ["A. 4 563","B. 6 345","C. 5 346","D. 3 457"], correct: 3 },
+  { q: "Nếu a | b thì ƯCLN(a, b) =", options: ["A. a","B. b","C. 1","D. ab"], correct: 0 },
+  { q: "Cắt 84 cm, 126 cm, 210 cm thành đoạn bằng nhau dài nhất. Mỗi đoạn dài", options: ["A. 14 cm","B. 21 cm","C. 28 cm","D. 42 cm"], correct: 3 },
+  { q: "Số nhỏ nhất chia hết cho 15 và 28 đồng thời < 500 là", options: ["A. 420","B. 210","C. 280","D. 315"], correct: 0 },
+  { q: "Chọn đúng", options: ["A. 10^3 = 100","B. 10^3 = 1000","C. 10^3 = 10 000","D. 10^3 = 10"], correct: 1 },
+  { q: "(80 − 25) ÷ 5 + 2^3 =", options: ["A. 15","B. 17","C. 19","D. 21"], correct: 2 },
+  { q: "Số 2 chữ số lớn nhất chia hết cho 4 và 5", options: ["A. 80","B. 90","C. 95","D. 100"], correct: 0 },
+  { q: "(a + b) + c = a + (b + c) luôn đúng với", options: ["A. Cộng số tự nhiên","B. Trừ số tự nhiên","C. Chia số tự nhiên","D. Cả B và C"], correct: 0 },
+
+  { q: "x có ba chữ số, hàng chục là 7. Số nào chia hết cho 3?", options: ["A. 472","B. 571","C. 683","D. 774"], correct: 3 },
+  { q: "x nhỏ nhất > 200 chia hết cho 9 và 4", options: ["A. 204","B. 216","C. 228","D. 252"], correct: 1 },
+  { q: "Tổng các số nguyên từ −1 đến −10", options: ["A. −45","B. −55","C. −65","D. 0"], correct: 1 },
+  { q: "|−12| − |−9| + |−3| =", options: ["A. 0","B. 6","C. 12","D. 18"], correct: 1 },
+  { q: "Chọn số HỢP SỐ", options: ["A. 2","B. 3","C. 5","D. 21"], correct: 3 },
+  { q: "Phân tích 1 000", options: ["A. 2^3·5^3","B. 2^4·5^2","C. 2^2·5^4","D. 2^5·5^3"], correct: 0 },
+  { q: "Số KHÔNG chia hết cho 25", options: ["A. 225","B. 350","C. 475","D. 560"], correct: 3 },
+  { q: "Chọn số < 50 chia hết cho 3 và khi chia 5 dư 2", options: ["A. 17","B. 32","C. 47","D. 42"], correct: 3 },
+  { q: "100 − 10 ÷ 2 × 5 bằng 75 nếu đặt ngoặc", options: ["A. 100 − (10 ÷ 2) × 5","B. (100 − 10) ÷ (2 × 5)","C. 100 − 10 ÷ (2 × 5)","D. (100 − 10) ÷ 2 × 5"], correct: 0 },
+  { q: "(10^2) − (3^2) − (4^2) =", options: ["A. 25","B. 75","C. 50","D. 0"], correct: 1 },
+
+  { q: "(−12) + 7 − 4 =", options: ["A. −1","B. −9","C. −5","D. −3"], correct: 1 },
+  { q: "Số 250 chia hết cho", options: ["A. 2, 5 và 10","B. 2 và 5","C. 5 và 10","D. chỉ 5"], correct: 0 },
+  { q: "Trong các số 91; 121; 169; 221 – số KHÔNG nguyên tố là", options: ["A. 91","B. 121","C. 169","D. Tất cả"], correct: 3 },
+  { q: "Hai đèn chớp: A mỗi 6s, B mỗi 8s. Sau bao lâu chớp cùng lúc?", options: ["A. 14s","B. 24s","C. 36s","D. 48s"], correct: 1 },
+  { q: "x có 3 chữ số, tổng chữ số 18 và x chia hết cho 9. Chọn đúng", options: ["A. 954","B. 882","C. 765","D. Tất cả đúng"], correct: 3 },
+  { q: "(a − b) + (−c) =", options: ["A. a − b + c","B. a − b − c","C. a + b − c","D. −a − b − c"], correct: 1 },
+  { q: "504 × 25 =", options: ["A. 12 100","B. 12 500","C. 12 600","D. 12 700"], correct: 2 },
+  { q: "7 200 ÷ 90 =", options: ["A. 70","B. 72","C. 80","D. 90"], correct: 2 },
+  { q: "Chọn phát biểu đúng", options: ["A. Số chia hết cho 9 chắc chắn chia hết cho 3","B. Số chia hết cho 6 chắc chắn chia hết cho 9","C. Số chia hết cho 8 chắc chắn chia hết cho 4","D. A và C đúng"], correct: 3 },
+  { q: "10^3 − (2^5 + 3^4) =", options: ["A. 887","B. 781","C. 889","D. 901"], correct: 0 }
+];
 
     let questions = [];
     let timeLeft = 90 * 60; // 90 phút = 5400 giây
